@startuml

title __STATE's Class Diagram__\n

  namespace project {
    namespace State {
      class project.State.AddPackState {
          + goBackState()
          + goMenuState()
      }
    }
  }
  

  namespace project {
    namespace State {
      class project.State.ButtonMenu {
          + ButtonMenu()
          + onClick()
          + onClick()
          + setActive()
      }
    }
  }
  

  namespace project {
    namespace State {
      class project.State.ClientMenuState {
          + goBackState()
          + goMenuState()
      }
    }
  }
  

  namespace project {
    namespace State {
      class project.State.CourierMenuState {
          + goBackState()
          + goMenuState()
      }
    }
  }
  

  namespace project {
    namespace State {
      class project.State.ForwarderMenuState {
          + goBackState()
          + goMenuState()
      }
    }
  }
  

  namespace project {
    namespace State {
      interface project.State.MenuState {
          {abstract} + goBackState()
          {abstract} + goMenuState()
      }
    }
  }
  

  project.State.AddPackState .up.|> project.State.MenuState
  project.State.AddPackState -up-|> project.Utils.DataUtil
  project.State.ButtonMenu o-- project.State.MenuState : menuState
  project.State.ClientMenuState .up.|> project.State.MenuState
  project.State.ClientMenuState -up-|> project.Utils.DataUtil
  project.State.CourierMenuState .up.|> project.State.MenuState
  project.State.CourierMenuState -up-|> project.Utils.DataUtil
  project.State.ForwarderMenuState .up.|> project.State.MenuState
  project.State.ForwarderMenuState -up-|> project.Utils.DataUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
